src/snapshots/boxt__tui__tests__tui_undo_redo-6.snap
---
source: src/tui.rs
expression: buf_string(&buf)
---
┏━━━━━━━━━━━━━Boxt━━━━━━━━━━━━━┓
┃+-+                           ┃
┃| |                           ┃
┃+-+---+                       ┃
┃  |   |                       ┃
┃  |   |                       ┃
┃  +---+                       ┃
┗ Move <WASD> Rect <R> Quit <Q>┛
